--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,10 @@
 /*  your css code here. If applicable */
+img{
+	height:50px;
+	width:150px;
+}
+.summary{
+	border-top:4px solid #5ea4f3;
+	background-color:#f7fbff;
+}
+
